fix(ui): fixed date range picker button alignment (#68)

--- a/packages/ui/src/components/date-range-picker/date-range-picker.module.css
+++ b/packages/ui/src/components/date-range-picker/date-range-picker.module.css
@@ -59,7 +59,7 @@
 
 .calendar-day-btn {
   @apply text-sm font-normal transition-colors;
-  @apply block size-9 rounded-md p-0;
+  @apply size-9 rounded-md p-0;
 }
 
 .calendar-day-btn--selected {
